--- a/bin/imgui.ini
+++ b/bin/imgui.ini
@@ -23,3 +23,13 @@ Pos=1282,56
 Size=339,856
 Collapsed=0
 
+[Window][Record Count]
+Pos=221,97
+Size=87,71
+Collapsed=0
+
+[Window][bsa gui]
+Pos=65,105
+Size=400,354
+Collapsed=0
+
