bsa and nif beginnings

--- a/bin/imgui.ini
+++ b/bin/imgui.ini
@@ -29,7 +29,22 @@ Size=87,71
 Collapsed=0
 
 [Window][bsa gui]
-Pos=16,25
+Pos=20,24
 Size=400,354
+Collapsed=0
+
+[Window][nif gui]
+Pos=429,24
+Size=400,35
+Collapsed=0
+
+[Window][bsa]
+Pos=60,60
+Size=400,881
+Collapsed=0
+
+[Window][nif]
+Pos=472,60
+Size=400,35
 Collapsed=0
 
