c conversions. bsa fopen fread fseek

--- a/bin/imgui.ini
+++ b/bin/imgui.ini
@@ -1,50 +1,15 @@
-[Window][Debug##Default]
-Pos=60,60
-Size=400,400
-Collapsed=0
-
-[Window][Hello, world!]
-Pos=88,28
-Size=345,180
-Collapsed=0
-
-[Window][Dear ImGui Demo]
-Pos=74,66
-Size=558,680
-Collapsed=0
-
-[Window][Another Window]
-Pos=60,60
-Size=198,71
-Collapsed=0
-
-[Window][Dear ImGui Style Editor]
-Pos=1282,56
-Size=339,856
-Collapsed=0
-
-[Window][Record Count]
-Pos=221,97
-Size=87,71
-Collapsed=0
-
-[Window][bsa gui]
-Pos=20,24
-Size=400,354
-Collapsed=0
-
-[Window][nif gui]
-Pos=429,24
-Size=400,35
-Collapsed=0
-
 [Window][bsa]
 Pos=60,60
 Size=400,881
 Collapsed=0
 
-[Window][nif]
-Pos=472,60
-Size=400,35
+[Window][nifs]
+Pos=469,61
+Size=400,48
+Collapsed=0
+
+[Window][Debug##Default]
+Pos=60,60
+Size=400,400
 Collapsed=0
 
