--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,8 @@
 *.log
 build/obj/Release/Dark2.vcxproj.FileListAbsolute.txt
 *.ipch
+build/obj/Debug/Dark2.vcxproj.FileListAbsolute.txt
+build/obj/Debug/vc142.idb
+bin/error.txt
+bin/imgui.ini
+bin/error.txt
