glm vecs dosent ctor

--- a/bin/imgui.ini
+++ b/bin/imgui.ini
@@ -1,15 +1,25 @@
 [Window][bsa]
-Pos=50,5
-Size=400,288
+Pos=48,12
+Size=400,354
 Collapsed=0
 
 [Window][nifs]
-Pos=451,5
+Pos=456,12
 Size=400,48
 Collapsed=0
 
 [Window][Debug##Default]
 Pos=60,60
 Size=400,400
+Collapsed=0
+
+[Window][Dear ImGui Demo]
+Pos=1369,1061
+Size=550,455
+Collapsed=1
+
+[Window][opengl]
+Pos=39,417
+Size=400,144
 Collapsed=0
 
