--- a/bin/imgui.ini
+++ b/bin/imgui.ini
@@ -1,6 +1,6 @@
 [Window][bsa]
 Pos=48,12
-Size=400,288
+Size=400,354
 Collapsed=0
 
 [Window][Debug##Default]
@@ -19,7 +19,7 @@ Size=400,144
 Collapsed=0
 
 [Window][nifs]
-Pos=640,4
+Pos=644,-4
 Size=450,1074
 Collapsed=0
 
