--- a/bin/imgui.ini
+++ b/bin/imgui.ini
@@ -14,7 +14,7 @@ Size=400,144
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=1901,1061
+Pos=1341,696
 Size=550,660
 Collapsed=0
 
@@ -24,7 +24,12 @@ Size=400,354
 Collapsed=0
 
 [Window][Dear ImGui Style Editor]
-Pos=1307,181
-Size=339,856
+Pos=1307,180
+Size=393,906
+Collapsed=0
+
+[Window][Example: Simple layout]
+Pos=60,60
+Size=500,440
 Collapsed=0
 
