--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -89,6 +89,7 @@
         "cfloat": "cpp",
         "climits": "cpp",
         "string_view": "cpp",
-        "cstdarg": "cpp"
+        "cstdarg": "cpp",
+        "*.rh": "cpp"
     }
 }
