updated glm, glfw and bullet
we're back. fixed a bunch of c++

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -96,6 +96,11 @@
         "units": "cpp",
         "stat.h": "c",
         "esp.h": "c",
-        "defs": "cpp"
+        "defs": "cpp",
+        "bit": "cpp",
+        "clocale": "cpp",
+        "functional": "cpp",
+        "unordered_map": "cpp",
+        "xhash": "cpp"
     }
 }
