--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -101,6 +101,11 @@
         "clocale": "cpp",
         "functional": "cpp",
         "unordered_map": "cpp",
-        "xhash": "cpp"
+        "xhash": "cpp",
+        "array": "cpp",
+        "charconv": "cpp",
+        "format": "cpp",
+        "forward_list": "cpp",
+        "optional": "cpp"
     }
 }
