tonsa renames! simple loading screen

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -106,6 +106,7 @@
         "charconv": "cpp",
         "format": "cpp",
         "forward_list": "cpp",
-        "optional": "cpp"
+        "optional": "cpp",
+        "nitypes.h": "c"
     }
 }
