renamed confusing nifp -> nif

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -117,6 +117,7 @@
         "queue": "cpp",
         "set": "cpp",
         "stop_token": "cpp",
-        "thread": "cpp"
+        "thread": "cpp",
+        "bsa.h": "c"
     }
 }
