out-ifdef NiTriShape stuff

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -119,6 +119,7 @@
         "stop_token": "cpp",
         "thread": "cpp",
         "bsa.h": "c",
-        "niftypes.h": "c"
+        "niftypes.h": "c",
+        "nif.h": "c"
     }
 }
