bitmasking to toggle object types

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,125 +1,11 @@
 {
-    "terminal.integrated.shell.windows": "cmd.exe",
-    "terminal.integrated.shellArgs.windows": [
-        "/k", "C:\\Program Files (x86)\\Microsoft Visual Studio\\2019\\Community\\Common7\\Tools\\VsDevCmd.bat"
-    ],
+    "terminal.integrated.defaultProfile.windows": "VsDevCmd",
     "files.associations": {
-        "aabb": "cpp",
-        "camera": "cpp",
-        "geometry": "cpp",
-        "material": "cpp",
-        "texture": "cpp",
-        "scene": "cpp",
-        "shader": "cpp",
-        "pointlight": "cpp",
-        "group": "cpp",
-        "bsa": "cpp",
-        "niif": "cpp",
-        "bsa2": "cpp",
-        "bsah": "cpp",
-        "bsaman": "cpp",
-        "bsabasic": "cpp",
-        "bsaworker": "cpp",
-        "archive": "cpp",
-        "files": "cpp",
-        "nif": "cpp",
-        "src/*": "C++",
-        "types": "cpp",
-        "fstream": "cpp",
-        "vector": "cpp",
-        "initializer_list": "cpp",
         "list": "cpp",
-        "type_traits": "cpp",
-        "xstring": "cpp",
-        "xtree": "cpp",
-        "system_error": "cpp",
-        "xlocale": "cpp",
-        "xutility": "cpp",
-        "istream": "cpp",
-        "ios": "cpp",
-        "ostream": "cpp",
-        "streambuf": "cpp",
-        "xlocbuf": "cpp",
-        "algorithm": "cpp",
-        "cctype": "cpp",
-        "chrono": "cpp",
-        "cmath": "cpp",
-        "concepts": "cpp",
-        "cstddef": "cpp",
-        "cstdint": "cpp",
-        "cstdio": "cpp",
-        "cstdlib": "cpp",
-        "cstring": "cpp",
-        "ctime": "cpp",
-        "cwchar": "cpp",
-        "exception": "cpp",
-        "filesystem": "cpp",
-        "iomanip": "cpp",
-        "iosfwd": "cpp",
-        "iostream": "cpp",
-        "limits": "cpp",
-        "locale": "cpp",
         "map": "cpp",
-        "memory": "cpp",
-        "new": "cpp",
-        "ratio": "cpp",
-        "stdexcept": "cpp",
-        "string": "cpp",
-        "tuple": "cpp",
-        "typeinfo": "cpp",
-        "utility": "cpp",
-        "xfacet": "cpp",
-        "xiosbase": "cpp",
-        "xlocinfo": "cpp",
-        "xlocmes": "cpp",
-        "xlocmon": "cpp",
-        "xlocnum": "cpp",
-        "xloctime": "cpp",
-        "xmemory": "cpp",
-        "xstddef": "cpp",
-        "xtr1common": "cpp",
-        "arc": "cpp",
-        "sstream": "cpp",
-        "renderable": "cpp",
-        "libs": "cpp",
-        "atomic": "cpp",
-        "compare": "cpp",
-        "iterator": "cpp",
-        "cerrno": "cpp",
-        "cfloat": "cpp",
-        "climits": "cpp",
-        "string_view": "cpp",
-        "cstdarg": "cpp",
-        "*.rh": "cpp",
-        "skyrim_units": "cpp",
-        "skyrim_libs": "cpp",
-        "units": "cpp",
-        "stat.h": "c",
-        "esp.h": "c",
-        "fwd": "cpp",
-        "bit": "cpp",
-        "clocale": "cpp",
-        "functional": "cpp",
-        "unordered_map": "cpp",
-        "xhash": "cpp",
-        "array": "cpp",
-        "charconv": "cpp",
-        "format": "cpp",
-        "forward_list": "cpp",
-        "optional": "cpp",
-        "nitypes.h": "c",
-        "common.h": "c",
-        "stdlib.h": "c",
-        "complex": "cpp",
-        "condition_variable": "cpp",
-        "deque": "cpp",
-        "mutex": "cpp",
-        "queue": "cpp",
-        "set": "cpp",
-        "stop_token": "cpp",
-        "thread": "cpp",
-        "bsa.h": "c",
-        "niftypes.h": "c",
-        "nif.h": "c"
+        "filesystem": "cpp",
+        "xlocale": "cpp",
+        "xtree": "cpp",
+        "unordered_map": "cpp"
     }
 }
