--- a/bin/imgui.ini
+++ b/bin/imgui.ini
@@ -4,8 +4,8 @@ Size=400,400
 Collapsed=0
 
 [Window][Archive]
-Pos=0,0
-Size=450,492
+Pos=450,0
+Size=450,453
 Collapsed=0
 
 [Window][Nif]
@@ -14,7 +14,7 @@ Size=450,1323
 Collapsed=1
 
 [Window][Plugin]
-Pos=450,0
+Pos=900,0
 Size=450,1440
 Collapsed=1
 
@@ -39,7 +39,17 @@ Size=600,600
 Collapsed=0
 
 [Window][Container Menu]
-Pos=1515,644
+Pos=1472,446
 Size=600,600
 Collapsed=0
+
+[Window][Models]
+Pos=1350,0
+Size=450,1323
+Collapsed=1
+
+[Window][Interiors]
+Pos=1800,0
+Size=450,144
+Collapsed=1
 
