the go_sideways factory

--- a/apps/dark/bin/imgui.ini
+++ b/apps/dark/bin/imgui.ini
@@ -45,7 +45,7 @@ Collapsed=0
 
 [Window][Models]
 Pos=1350,0
-Size=450,2154
+Size=450,1289
 Collapsed=1
 
 [Window][Interiors]
@@ -54,6 +54,11 @@ Size=450,144
 Collapsed=0
 
 [Window][Cell View]
+Pos=1800,0
+Size=450,144
+Collapsed=0
+
+[Window][ View]
 Pos=1800,0
 Size=450,144
 Collapsed=0
