--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -101,6 +101,7 @@
       "jacobi": "cpp",
       "lu": "cpp",
       "qr": "cpp",
-      "svd": "cpp"
+      "svd": "cpp",
+      "niftypes.h": "c"
     }
 }
