draugr anim chain, wireframe, land mesh

--- a/apps/dark/bin/imgui.ini
+++ b/apps/dark/bin/imgui.ini
@@ -16,7 +16,7 @@ Collapsed=1
 [Window][Plugin]
 Pos=900,0
 Size=450,2160
-Collapsed=0
+Collapsed=1
 
 [Window][cell]
 Pos=1350,0
@@ -24,7 +24,7 @@ Size=450,144
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=2114,358
+Pos=2382,372
 Size=550,680
 Collapsed=1
 
@@ -45,7 +45,7 @@ Collapsed=0
 
 [Window][Models]
 Pos=1350,0
-Size=450,1459
+Size=450,1272
 Collapsed=1
 
 [Window][Interiors]
@@ -61,5 +61,10 @@ Collapsed=0
 [Window][ View]
 Pos=1800,0
 Size=450,300
+Collapsed=0
+
+[Window][View]
+Pos=1800,0
+Size=450,500
 Collapsed=0
 
