landscape alpha layers starting to work

--- a/.gitignore
+++ b/.gitignore
@@ -36,23 +36,16 @@
 *.vcxproj
 *.pdb
 *.filters
-.vs/Dark2/v16/ipch/AutoPCH/3300e74fe3337582/MATERIAL.ipch
+*.ipch
 *.opendb
 *.db
 .vs/Dark2/v16/.suo
 *.log
-build/obj/Release/Dark2.vcxproj.FileListAbsolute.txt
 *.ipch
-build/obj/Debug/Dark2.vcxproj.FileListAbsolute.txt
-build/obj/Debug/vc142.idb
 bin/error.txt
-bin/error.txt
-bin/Dark2.ilk
 *.db-shm
 *.db-wal
 *.recipe
 *.hkx
-bin/temp/
-bin/test.dds
 .vs/
 build/
