--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -102,6 +102,7 @@
       "lu": "cpp",
       "qr": "cpp",
       "svd": "cpp",
-      "niftypes.h": "c"
+      "niftypes.h": "c",
+      "random": "cpp"
     }
 }
