lot of things changed *
sound is now stored per buffer / per path
alcove exit looks good
player backwards walking is fixed
misc items now have basic dynamic collision

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -105,6 +105,7 @@
       "niftypes.h": "c",
       "random": "cpp",
       "alhelpers.h": "c",
-      "future": "cpp"
+      "future": "cpp",
+      "bitset": "cpp"
     }
 }
